--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   intl: ^0.19.0
   url_launcher: ^6.2.2
   geolocator: ^10.1.0
+  sqflite: any
+  path_provider: any
 
   #firebase
   firebase_core: ^3.9.0
